--- a/Quiz/src/App.css
+++ b/Quiz/src/App.css
@@ -20,8 +20,6 @@
   position: relative;
   height: 100vh;
   width: 100vw;
-  /* background: linear-gradient(180deg, #0a0a0a 0%, #1E1D1C 100%); */
-
 }
 .theme-change img{
   top: -5%;
@@ -47,7 +45,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* gap: 15%; */
 }
 
 .home-quiz{
@@ -65,12 +62,9 @@
   font-family: Pranshu;
   letter-spacing: 1vmax;
   text-align: center;
-
-  /* width: 20vmax; */
-  /* text-align: center; */
   border-radius: 31px;
   font-family: Om;
- animation: bhuk-bhuk 0.99s linear infinite alternate;
+  animation: bhuk-bhuk 0.99s linear infinite alternate;
 }
 @keyframes bhuk-bhuk {
   100%{
@@ -117,32 +111,22 @@
   text-align: center;
   font-size: 3vmax;
   font-family: pranshu;
-  /* letter-spacing: 1vmax; */
-  
-
 }
 
 .all-options{
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: aqua; */
   height: 60%;
   font-family: options;
   font-weight: 900;
-  
-  
-  /* justify-content: center; */
   gap: 13%;
   padding-left: 3vmax;
   padding-right: 3vmax;
 }
 .options-option{
-  /* background-color: aquamarine; */
   height: 100%;
-  /* width: 80%; */
   display: flex;
-  /* flex-direction: column; */
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
@@ -155,7 +139,6 @@
   text-align: center;
   border: 1px solid #F9F3DE;
   box-shadow: 3px 4px 4.5px 3px rgba(0, 0, 0, 0.25);
-
   height: 6vmax;
   display: flex;
   align-items: center;
@@ -202,18 +185,15 @@
 }
 .report-container{
   height: 75vh;
-  /* background-color: #5D6165; */
   display: flex;
-  /* align-items: center; */
   justify-content: center;
 }
 .all-reports{
   width: 70%;
   height: 90%;
- /* background-color: aqua; */
- border-radius: 30px;
- box-shadow: 3px 4px 4.5px 3px rgba(0, 0, 0, 0.25);
- backdrop-filter: blur(11px);
+  border-radius: 30px;
+  box-shadow: 3px 4px 4.5px 3px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(11px);
 
 
  background: rgba( 255, 255, 255, 0.05 );
@@ -268,9 +248,10 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
   transform: scale(1.1);
 }
 @media(max-width: 480px) {
-  .quiz-centre{
-    /* height: 60vh; */
+  .home-play{
+    bottom: 40vmax;
   }
+ 
   .quiz-question{
     padding-bottom: 4vmax;
     padding-top: 4vmax;
