--- a/Quiz/src/App.css
+++ b/Quiz/src/App.css
@@ -144,6 +144,7 @@
   align-items: center;
   justify-content: center;
   padding: 0 0.5vmax;
+  border-radius: 8px;
 }
 .option:hover{
   cursor: pointer;
